--- a/App/static/acadmin.html
+++ b/App/static/acadmin.html
@@ -19,10 +19,13 @@
   <div class="container-fluid" style="background: #00aff0" ng-controller="ctrlAdminTop">
     <div class="navbar-header">
       <a class="navbar-brand" style="color:white " ui-sref="acadmin.word">
-        黑小巫管理后台 {{loginedUser}}
+        悦源管理后台 {{loginedUser}}
       </a>
     </div>
-    <p class="nav navbar-nav navbar-right" style="line-height:50px; margin-right:0px"> {{ broadInfo }} </p>
+    <p class="nav navbar-nav navbar-right" style="line-height:50px; margin-right:0px">
+      {{ broadInfo }}
+      <a href="#" ng-click="logout()"></a>
+    </p>
   </div>
 </nav>
 
