2015/3/2 bugfix 一、后台管理 1.登陆界面，ie下 记住密码 没有地方挑钩  -- 飞到最前面了。。。研究中。 2.内容编辑 后面的 全部展开 没有反应  --  全部展开的意思，是里面的树全展开。 3.ie下 ueditor控件单图上传 浏览器死掉了 文件已上传成功。 -- 这个你研究一下。 4.内容编辑 右侧信息发布 点击标题没有反应 如不关联修改功能去掉链接。-- 回头增加一个浏览的功能。 5.编辑信息 最上面用title代替id -- 去掉了，title有自己的栏目。 6.系统名称改成 悦库  -- over 7.分页提供刷新功能   -- 直接f5就行。 8.用户管理 新增用户 用户名重复 没有提示信息 -- 牵扯到分页，直接提交失败。 9.栏目编辑 浏览 有什么用  --  系统设置和栏目编辑是提供admin用的。用户不能自己增加用户和编辑栏目。 10.栏目编辑 全部展开 没有反应. -- 先要reset出来数据。防止乱编辑。

--- a/App/static/acadmin.html
+++ b/App/static/acadmin.html
@@ -2,7 +2,7 @@
 <html ng-app="blacapp">
 <head>
   <meta charset="utf-8">
-  <title>黑小巫的通用门户网站</title>
+  <title>悦库门户网站</title>
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="acfile/main.css" rel="stylesheet">
   <link href="acfile/angular-ui-tree.css" rel="stylesheet">
