更新后台管理标题。

--- a/App/static/acadmin.html
+++ b/App/static/acadmin.html
@@ -2,7 +2,7 @@
 <html ng-app="blacapp">
 <head>
   <meta charset="utf-8">
-  <title>悦库门户网站</title>
+  <title>网站管理后台</title>
   <link href="css/bootstrap.css" rel="stylesheet">
   <link href="acfile/main.css" rel="stylesheet">
   <link href="acfile/angular-ui-tree.css" rel="stylesheet">
@@ -19,7 +19,7 @@
   <div class="container-fluid" style="background: #00aff0" ng-controller="ctrlAdminTop">
     <div class="navbar-header">
       <a class="navbar-brand" style="color:white " ui-sref="acadmin.word">
-        悦源管理后台 {{loginedUser}}
+        管理后台 {{loginedUser}}
       </a>
     </div>
     <p class="nav navbar-nav navbar-right" style="line-height:50px; margin-right:0px">
