手机网站almost完成。

--- a/App/static/seomb/www/index.html
+++ b/App/static/seomb/www/index.html
@@ -24,3 +24,8 @@
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
+
+
+<script src="/static/js/ueditor/ueditor.config.js"></script>
+<script src="/static/js/ueditor/ueditor.all.min.js"> </script>
+<script src="/static/js/ueditor/lang/zh-cn/zh-cn.js"></script>
