手机网站almost完成。

--- a/App/static/acadmin.html
+++ b/App/static/acadmin.html
@@ -19,7 +19,7 @@
   <div class="container-fluid" style="background: #00aff0" ng-controller="ctrlAdminTop">
     <div class="navbar-header">
       <a class="navbar-brand" style="color:white " ui-sref="acadmin.word">
-        管理后台 {{loginedUser}}
+        wlink.top2015管理后台 {{loginedUser}}
       </a>
     </div>
     <p class="nav navbar-nav navbar-right" style="line-height:50px; margin-right:0px">
